--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -247,9 +247,9 @@ QPushButton:hover {
       <property name="geometry">
        <rect>
         <x>330</x>
-        <y>330</y>
-        <width>521</width>
-        <height>61</height>
+        <y>370</y>
+        <width>531</width>
+        <height>41</height>
        </rect>
       </property>
       <property name="sizePolicy">
@@ -286,7 +286,7 @@ hr { height: 1px; border-width: 0; }
 li.unchecked::marker { content: &quot;\2610&quot;; }
 li.checked::marker { content: &quot;\2612&quot;; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Segoe UI'; font-size:36pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:26pt;&quot;&gt;DOMINIQUE&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:20pt;&quot;&gt;DOMINIQUE&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
      <widget class="QLabel" name="PlayerNameHeadline">
@@ -355,10 +355,10 @@ QPushButton:hover {
      <widget class="QLabel" name="PlayerIcon_2">
       <property name="geometry">
        <rect>
-        <x>500</x>
-        <y>130</y>
-        <width>191</width>
-        <height>171</height>
+        <x>460</x>
+        <y>120</y>
+        <width>291</width>
+        <height>231</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -369,6 +369,12 @@ QPushButton:hover {
       </property>
       <property name="textFormat">
        <enum>Qt::TextFormat::RichText</enum>
+      </property>
+      <property name="pixmap">
+       <pixmap resource="Resources.qrc">:/Images/Characters/dominque-new-design.png</pixmap>
+      </property>
+      <property name="scaledContents">
+       <bool>true</bool>
       </property>
      </widget>
      <widget class="QPushButton" name="BackToMenu">
@@ -431,32 +437,13 @@ QPushButton:hover {
      <zorder>BackToMenu</zorder>
     </widget>
     <widget class="QWidget" name="page_3">
-     <widget class="QLabel" name="Background3">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>-40</y>
-        <width>1201</width>
-        <height>721</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background-color: rgb(148, 0, 212)</string>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-      <property name="textFormat">
-       <enum>Qt::TextFormat::RichText</enum>
-      </property>
-     </widget>
      <widget class="QLabel" name="Player">
       <property name="geometry">
        <rect>
-        <x>170</x>
+        <x>990</x>
         <y>190</y>
         <width>91</width>
-        <height>171</height>
+        <height>181</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -472,10 +459,10 @@ QPushButton:hover {
      <widget class="QLabel" name="Enemy">
       <property name="geometry">
        <rect>
-        <x>960</x>
+        <x>140</x>
         <y>190</y>
         <width>91</width>
-        <height>171</height>
+        <height>181</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -677,6 +664,12 @@ border-radius: 20px 20px 20px 20px;</string>
       <property name="text">
        <string/>
       </property>
+      <property name="pixmap">
+       <pixmap resource="Resources.qrc">:/Images/Characters/dominque-new-design.png</pixmap>
+      </property>
+      <property name="scaledContents">
+       <bool>true</bool>
+      </property>
      </widget>
      <widget class="QLabel" name="SwordStatus">
       <property name="geometry">
@@ -795,21 +788,22 @@ background-color: rgb(194, 194, 255);</string>
      <widget class="QLabel" name="EnemyName">
       <property name="geometry">
        <rect>
-        <x>920</x>
-        <y>60</y>
-        <width>171</width>
-        <height>51</height>
+        <x>940</x>
+        <y>110</y>
+        <width>191</width>
+        <height>31</height>
        </rect>
       </property>
       <property name="font">
        <font>
         <family>Lucida Bright</family>
-        <pointsize>15</pointsize>
+        <pointsize>14</pointsize>
         <bold>true</bold>
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">color:white;</string>
+       <string notr="true">background-color: rgb(150, 0, 0);
+color: white;</string>
       </property>
       <property name="text">
        <string>NOSFERATU</string>
@@ -821,21 +815,22 @@ background-color: rgb(194, 194, 255);</string>
      <widget class="QLabel" name="EnemyHP">
       <property name="geometry">
        <rect>
-        <x>900</x>
-        <y>100</y>
+        <x>930</x>
+        <y>140</y>
         <width>211</width>
-        <height>51</height>
+        <height>31</height>
        </rect>
       </property>
       <property name="font">
        <font>
         <family>Lucida Bright</family>
-        <pointsize>15</pointsize>
+        <pointsize>14</pointsize>
         <bold>true</bold>
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">color:white;</string>
+       <string notr="true">background-color:rgb(150, 0, 0);
+color:white;</string>
       </property>
       <property name="text">
        <string>10000 / 10000</string>
@@ -905,7 +900,73 @@ QPushButton:hover {
        <string>GIVE UP</string>
       </property>
      </widget>
-     <zorder>Background3</zorder>
+     <widget class="QLabel" name="Background_2">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>-10</y>
+        <width>1221</width>
+        <height>101</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(148, 0, 212)</string>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="textFormat">
+       <enum>Qt::TextFormat::RichText</enum>
+      </property>
+      <property name="pixmap">
+       <pixmap resource="Resources.qrc">:/Images/BackgroundImages/background-art-expanded.png</pixmap>
+      </property>
+      <property name="scaledContents">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QLabel" name="BattleGround">
+      <property name="geometry">
+       <rect>
+        <x>-30</x>
+        <y>90</y>
+        <width>1221</width>
+        <height>601</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(148, 0, 212)</string>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="textFormat">
+       <enum>Qt::TextFormat::RichText</enum>
+      </property>
+      <property name="pixmap">
+       <pixmap resource="Resources.qrc">:/Images/BackgroundImages/battle-ground.png</pixmap>
+      </property>
+      <property name="scaledContents">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QLabel" name="ExitBG">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>10</y>
+        <width>171</width>
+        <height>81</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgba(0, 0, 0, 170);</string>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <zorder>BattleGround</zorder>
      <zorder>CommandGUI</zorder>
      <zorder>Player</zorder>
      <zorder>Enemy</zorder>
@@ -921,13 +982,15 @@ QPushButton:hover {
      <zorder>EnemyName</zorder>
      <zorder>EnemyHP</zorder>
      <zorder>PlayerHPLabel</zorder>
+     <zorder>Background_2</zorder>
+     <zorder>ExitBG</zorder>
      <zorder>GiveUp</zorder>
     </widget>
     <widget class="QWidget" name="page_4">
      <widget class="QLabel" name="Player_2">
       <property name="geometry">
        <rect>
-        <x>170</x>
+        <x>140</x>
         <y>190</y>
         <width>91</width>
         <height>171</height>
@@ -946,7 +1009,7 @@ QPushButton:hover {
      <widget class="QLabel" name="Enemy_2">
       <property name="geometry">
        <rect>
-        <x>960</x>
+        <x>990</x>
         <y>190</y>
         <width>91</width>
         <height>171</height>
@@ -966,9 +1029,9 @@ QPushButton:hover {
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>-70</y>
-        <width>1201</width>
-        <height>721</height>
+        <y>-10</y>
+        <width>1221</width>
+        <height>101</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -979,6 +1042,12 @@ QPushButton:hover {
       </property>
       <property name="textFormat">
        <enum>Qt::TextFormat::RichText</enum>
+      </property>
+      <property name="pixmap">
+       <pixmap resource="Resources.qrc">:/Images/BackgroundImages/background-art-expanded.png</pixmap>
+      </property>
+      <property name="scaledContents">
+       <bool>true</bool>
       </property>
      </widget>
      <widget class="QLabel" name="Card">
@@ -1368,6 +1437,32 @@ border-radius: 30px 30px 30px 30px;</string>
        <string/>
       </property>
      </widget>
+     <widget class="QLabel" name="BattleGround_2">
+      <property name="geometry">
+       <rect>
+        <x>-30</x>
+        <y>90</y>
+        <width>1221</width>
+        <height>601</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(148, 0, 212);</string>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="textFormat">
+       <enum>Qt::TextFormat::RichText</enum>
+      </property>
+      <property name="pixmap">
+       <pixmap resource="Resources.qrc">:/Images/BackgroundImages/battle-ground.png</pixmap>
+      </property>
+      <property name="scaledContents">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <zorder>BattleGround_2</zorder>
      <zorder>Background4</zorder>
      <zorder>CardBoard</zorder>
      <zorder>Enemy_2</zorder>
