--- a/Resources.qrc
+++ b/Resources.qrc
@@ -73,5 +73,7 @@
         <file>Images/Characters/dominique-gun-shoot.png</file>
         <file>Images/Characters/dominique-health-prepare.png</file>
         <file>Images/Characters/dominique-health-drink.png</file>
+        <file>Images/Characters/dominique-sword-prepare.png</file>
+        <file>Images/Characters/dominique-sword-slash.png</file>
     </qresource>
 </RCC>
